change opening times to offset times
