# src/YLunchApi.Domain/RestaurantAggregate/Dto/OpeningTimeReadDto.cs
@@ -5,8 +5,8 @@ namespace YLunchApi.Domain.RestaurantAggregate.Dto;
 public class OpeningTimeReadDto : EntityReadDto
 {
     public DayOfWeek DayOfWeek { get; set; }
-    public int StartTimeInMinutes { get; set; }
-    public int EndTimeInMinutes { get; set; }
-    public int? StartOrderTimeInMinutes { get; set; }
-    public int? EndOrderTimeInMinutes { get; set; }
+    public int OffsetOpenMinutes { get; set; }
+    public int OpenMinutes { get; set; }
+    public int OrderingOffsetOpenMinutes { get; set; }
+    public int OrderingOpenMinutes { get; set; }
 }
