# src/YLunchApi.Domain/RestaurantAggregate/Models/Restaurant.cs
@@ -23,11 +23,7 @@ public class Restaurant : Entity
         {
             var utcNow = DateTime.UtcNow;
             return x.DayOfWeek == utcNow.DayOfWeek &&
-                   (x.StartOrderTimeInMinutes < x.EndOrderTimeInMinutes ?
-                       x.StartOrderTimeInMinutes <= utcNow.MinutesFromMidnight() &&
-                       x.EndOrderTimeInMinutes > utcNow.MinutesFromMidnight() :
-                       x.StartOrderTimeInMinutes <= utcNow.MinutesFromMidnight() ||
-                       x.EndOrderTimeInMinutes > utcNow.MinutesFromMidnight());
+                   x.Contains(DateTime.UtcNow);
         });
 
     public bool IsPublic { get; set; }
